github_demos/bug/flexbison-master/flexbison/purecalc.output
语法

    0 $accept: calc $end

    1 calc: EOL
    2     | stmt EOL
    3     | LET NAME '(' symlist ')' '=' list EOL

    4 stmt: IF exp THEN list
    5     | IF exp THEN list ELSE list
    6     | WHILE exp DO list
    7     | exp

    8 list: %empty
    9     | stmt ';' list

   10 exp: exp CMP exp
   11    | exp '+' exp
   12    | exp '-' exp
   13    | exp '*' exp
   14    | exp '/' exp
   15    | '|' exp
   16    | '(' exp ')'
   17    | '-' exp
   18    | NUMBER
   19    | FUNC '(' explist ')'
   20    | NAME
   21    | NAME '=' exp
   22    | NAME '(' explist ')'

   23 explist: exp
   24        | exp ',' explist

   25 symlist: NAME
   26        | NAME ',' symlist


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 16 19 22
')' (41) 3 16 19 22
'*' (42) 13
'+' (43) 11
',' (44) 24 26
'-' (45) 12 17
'/' (47) 14
';' (59) 9
'=' (61) 3 21
'|' (124) 15
error (256)
NUMBER (258) 18
NAME (259) 3 20 21 22 25 26
FUNC (260) 19
EOL (261) 1 2 3
IF (262) 4 5
THEN (263) 4 5
ELSE (264) 5
WHILE (265) 6
DO (266) 6
LET (267) 3
CMP (268) 10
UMINUS (269)


Nonterminals, with rules where they appear

$accept (25)
    左： 0
calc (26)
    左： 1 2 3, 右： 0
stmt (27)
    左： 4 5 6 7, 右： 2 9
list (28)
    左： 8 9, 右： 3 4 5 6 9
exp (29)
    左： 10 11 12 13 14 15 16 17 18 19 20 21 22, 右： 4 5 6 7 10
    11 12 13 14 15 16 17 21 23 24
explist (30)
    左： 23 24, 右： 19 22 24
symlist (31)
    左： 25 26, 右： 3 26


State 0

    0 $accept: . calc $end

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    EOL     shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    LET     shift, and go to state 7
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    calc  转到状态 11
    stmt  转到状态 12
    exp   转到状态 13


State 1

   18 exp: NUMBER .

    $default  reduce using rule 18 (exp)


State 2

   20 exp: NAME .
   21    | NAME . '=' exp
   22    | NAME . '(' explist ')'

    '='  shift, and go to state 14
    '('  shift, and go to state 15

    $default  reduce using rule 20 (exp)


State 3

   19 exp: FUNC . '(' explist ')'

    '('  shift, and go to state 16


State 4

    1 calc: EOL .

    $default  reduce using rule 1 (calc)


State 5

    4 stmt: IF . exp THEN list
    5     | IF . exp THEN list ELSE list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 17


State 6

    6 stmt: WHILE . exp DO list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 18


State 7

    3 calc: LET . NAME '(' symlist ')' '=' list EOL

    NAME  shift, and go to state 19


State 8

   17 exp: '-' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 20


State 9

   15 exp: '|' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 21


State 10

   16 exp: '(' . exp ')'

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 22


State 11

    0 $accept: calc . $end

    $end  shift, and go to state 23


State 12

    2 calc: stmt . EOL

    EOL  shift, and go to state 24


State 13

    7 stmt: exp .
   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 7 (stmt)


State 14

   21 exp: NAME '=' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 30


State 15

   22 exp: NAME '(' . explist ')'

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp      转到状态 31
    explist  转到状态 32


State 16

   19 exp: FUNC '(' . explist ')'

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp      转到状态 31
    explist  转到状态 33


State 17

    4 stmt: IF exp . THEN list
    5     | IF exp . THEN list ELSE list
   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    THEN  shift, and go to state 34
    CMP   shift, and go to state 25
    '+'   shift, and go to state 26
    '-'   shift, and go to state 27
    '*'   shift, and go to state 28
    '/'   shift, and go to state 29


State 18

    6 stmt: WHILE exp . DO list
   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    DO   shift, and go to state 35
    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29


State 19

    3 calc: LET NAME . '(' symlist ')' '=' list EOL

    '('  shift, and go to state 36


State 20

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   17    | '-' exp .

    $default  reduce using rule 17 (exp)


State 21

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   15    | '|' exp .

    $default  reduce using rule 15 (exp)


State 22

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   16    | '(' exp . ')'

    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 37


State 23

    0 $accept: calc $end .

    $default  接受


State 24

    2 calc: stmt EOL .

    $default  reduce using rule 2 (calc)


State 25

   10 exp: exp CMP . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 38


State 26

   11 exp: exp '+' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 39


State 27

   12 exp: exp '-' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 40


State 28

   13 exp: exp '*' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 41


State 29

   14 exp: exp '/' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  转到状态 42


State 30

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   21    | NAME '=' exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 21 (exp)


State 31

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   23 explist: exp .
   24        | exp . ',' explist

    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ','  shift, and go to state 43

    $default  reduce using rule 23 (explist)


State 32

   22 exp: NAME '(' explist . ')'

    ')'  shift, and go to state 44


State 33

   19 exp: FUNC '(' explist . ')'

    ')'  shift, and go to state 45


State 34

    4 stmt: IF exp THEN . list
    5     | IF exp THEN . list ELSE list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  转到状态 46
    list  转到状态 47
    exp   转到状态 13


State 35

    6 stmt: WHILE exp DO . list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  转到状态 46
    list  转到状态 48
    exp   转到状态 13


State 36

    3 calc: LET NAME '(' . symlist ')' '=' list EOL

    NAME  shift, and go to state 49

    symlist  转到状态 50


State 37

   16 exp: '(' exp ')' .

    $default  reduce using rule 16 (exp)


State 38

   10 exp: exp . CMP exp
   10    | exp CMP exp .
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    CMP  error (nonassociative)

    $default  reduce using rule 10 (exp)


State 39

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   11    | exp '+' exp .
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 11 (exp)


State 40

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   12    | exp '-' exp .
   13    | exp . '*' exp
   14    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 12 (exp)


State 41

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   13    | exp '*' exp .
   14    | exp . '/' exp

    $default  reduce using rule 13 (exp)


State 42

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   14    | exp '/' exp .

    $default  reduce using rule 14 (exp)


State 43

   24 explist: exp ',' . explist

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp      转到状态 31
    explist  转到状态 51


State 44

   22 exp: NAME '(' explist ')' .

    $default  reduce using rule 22 (exp)


State 45

   19 exp: FUNC '(' explist ')' .

    $default  reduce using rule 19 (exp)


State 46

    9 list: stmt . ';' list

    ';'  shift, and go to state 52


State 47

    4 stmt: IF exp THEN list .
    5     | IF exp THEN list . ELSE list

    ELSE  shift, and go to state 53

    $default  reduce using rule 4 (stmt)


State 48

    6 stmt: WHILE exp DO list .

    $default  reduce using rule 6 (stmt)


State 49

   25 symlist: NAME .
   26        | NAME . ',' symlist

    ','  shift, and go to state 54

    $default  reduce using rule 25 (symlist)


State 50

    3 calc: LET NAME '(' symlist . ')' '=' list EOL

    ')'  shift, and go to state 55


State 51

   24 explist: exp ',' explist .

    $default  reduce using rule 24 (explist)


State 52

    9 list: stmt ';' . list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  转到状态 46
    list  转到状态 56
    exp   转到状态 13


State 53

    5 stmt: IF exp THEN list ELSE . list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  转到状态 46
    list  转到状态 57
    exp   转到状态 13


State 54

   26 symlist: NAME ',' . symlist

    NAME  shift, and go to state 49

    symlist  转到状态 58


State 55

    3 calc: LET NAME '(' symlist ')' . '=' list EOL

    '='  shift, and go to state 59


State 56

    9 list: stmt ';' list .

    $default  reduce using rule 9 (list)


State 57

    5 stmt: IF exp THEN list ELSE list .

    $default  reduce using rule 5 (stmt)


State 58

   26 symlist: NAME ',' symlist .

    $default  reduce using rule 26 (symlist)


State 59

    3 calc: LET NAME '(' symlist ')' '=' . list EOL

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  转到状态 46
    list  转到状态 60
    exp   转到状态 13


State 60

    3 calc: LET NAME '(' symlist ')' '=' list . EOL

    EOL  shift, and go to state 61


State 61

    3 calc: LET NAME '(' symlist ')' '=' list EOL .

    $default  reduce using rule 3 (calc)
